# VeriFL

./: README.md
Client/app/: build.gradle
Client/app/src/androidTest/java/com/va/client/: ExampleInstrumentedTest.java
Client/app/src/main/: AndroidManifest.xml
Client/app/src/main/cpp/: CMakeLists.txt  Cipher.cpp  Cipher.h  Commitment.cpp  Commitment.h  Config.h  Context.cpp  Context.h  HomHash.cpp  HomHash.h  KeyAgreement.cpp  KeyAgreement.h  MsgFormat.h  SecretShare.cpp  SecretShare.h  Utils.cpp  Utils.h  com_va_client_NativeClient.cpp  com_va_client_NativeClient.h
Client/app/src/main/java/com/va/client/: ClientSocket.java  Config.java  MainActivity.java  NativeClient.java
Client/app/src/main/res/layout/: activity_main.xml
Client/app/src/test/java/com/va/client/: ExampleUnitTest.java
Client/gradle/wrapper/: gradle-wrapper.properties
Server/src/cpp/: CMakeLists.txt  ServerContext.cpp  ServerContext.h  ServerMsgFormat.h  com_va_server_NativeServer.cpp  com_va_server_NativeServer.h
Server/src/java/com/va/server/: AggregationServer.java  Config.java  DropoutStructure.java  Main.java  NativeServer.java  SimAggregationServer.java
